--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,16 @@
     <link rel="import" href="../psu-logo.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
+      demo-snippet.light-bg {
+        --demo-snippet-demo: {
+          background: lightgray;
+        }
+      }
+      demo-snippet.dark-bg {
+        --demo-snippet-demo: {
+          background: gray;
+        }
+      }
     </style>
   </head>
   <body>
@@ -20,19 +30,37 @@
       <h3>Basic psu-logo demo</h3>
       <demo-snippet>
         <template>
-          <psu-logo college="Eberly College of Science Presented by Walmart"></psu-logo>
+          <psu-logo college="Eberly College of Science"></psu-logo>
+        </template>
+      </demo-snippet>
+      <h3>Dark theme psu-logo demo</h3>
+      <demo-snippet class="light-bg">
+        <template>
+          <psu-logo college="Eberly College of Science" theme="white"></psu-logo>
+        </template>
+      </demo-snippet>
+      <h3>Dark theme psu-logo demo</h3>
+      <demo-snippet>
+        <template>
+          <psu-logo college="Eberly College of Science" theme="dark"></psu-logo>
+        </template>
+      </demo-snippet>
+      <h3>Dark 2 theme psu-logo demo</h3>
+      <demo-snippet class="dark-bg">
+        <template>
+          <psu-logo college="Eberly College of Science" theme="dark2"></psu-logo>
         </template>
       </demo-snippet>
       <h3>psu-logo specifiy word wrap</h3>
       <demo-snippet>
         <template>
-          <psu-logo college="Eberly College of Science Presented by Walmart" word-wrap="28"></psu-logo>
+          <psu-logo college="Eberly College of Science" word-wrap="28"></psu-logo>
         </template>
       </demo-snippet>
       <h3>Basic psu-logo edit state</h3>
       <demo-snippet>
         <template>
-          <psu-logo college="Eberly College of Science Presented by Walmart" word-wrap="28" editable></psu-logo>
+          <psu-logo college="Eberly College of Science" word-wrap="28" editable></psu-logo>
         </template>
       </demo-snippet>
     </div>
