--- a/psu-logo.html
+++ b/psu-logo.html
@@ -164,7 +164,7 @@
      v27.8C111.6,94.3,89,109.6,72.6,119.2z" />
             </g>
             <g id="XMLID_273_">
-              <path id="sheild-lion" class="st1" d="M84.3,83.3c0-0.6,0.5-1.5,0.5-2.3c0-1-1.2-1.3-2.1-1.4c-1.9-0.3-2.6-0.2-2.6-0.6
+              <path id="shield-lion" class="st1" d="M84.3,83.3c0-0.6,0.5-1.5,0.5-2.3c0-1-1.2-1.3-2.1-1.4c-1.9-0.3-2.6-0.2-2.6-0.6
      c0-0.3,0.3-0.6,0.6-1.1c0.5-0.8,1.8-1,2.4-1.1c0.9-0.1,1.8-0.2,3-0.2c1.3,0,2.4,0.2,2.9,0.3c1.2,0.2,1.4,0.7,1.4,1.3
      c0,0.1,0,0.4,0,0.6c0,0.6-0.5,0.9-1.3,1c-0.2,0-0.5,0.1-0.6,0.1c-0.6,0.1-1.4,0.2-1.6,1c-0.6,1.6-1.6,2.9-2.3,2.9
      C84.5,83.6,84.3,83.5,84.3,83.3z M86.1,56.9c-0.1,0-0.3-0.1-0.3-0.4c0-0.3,0.2-0.6,0.6-1.2c1-1.3,2.3-2.9,2.8-2.9
